--- a/docker-compose-scipy.yml
+++ b/docker-compose-scipy.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   jupyter:
     container_name: jupyter
-    image: jupyter/datascience-notebook:latest
+    image: jupyter/scipy-notebook:latest
     ports:
       - 10000:8888
     volumes:
